--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
       <% if user_signed_in? %>
         Signed in as <%= current_user.email %>.
         <%= link_to "Sign out", destroy_user_session_path %>
-      <% elsif 0 %>
-		<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+      <% else %>
+		<%= link_to "Sign in with Facebook", "/auth/facebook" %>
+		<%= link_to "Sign up", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path %>
       <% end %>
     </div>
 	<div class="clear"> </div>  
