--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,14 +4,14 @@
   <%= devise_error_messages! %>
 
   <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
-
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
-
+  <%= f.email_field :email %></p>
+  <% if @user.password_required? %>
+	  <p><%= f.label :password %><br />
+	  <%= f.password_field :password %></p>
+	
+	  <p><%= f.label :password_confirmation %><br />
+	  <%= f.password_field :password_confirmation %></p>
+  <% end %>
   <p><%= f.submit "Sign up" %></p>
 <% end %>
 
